$Id$

2012-12-11  Christian Franke  <franke@computer.org>

	smartd.cpp: Add '-w PATH, --warnexec=PATH' option.
	smartd.8.in: Document this option.

2012-12-11  Christian Franke  <franke@computer.org>

	smartd.cpp: Add '-d ignore' directive.
	smartd.conf.5.in: Document '-d ignore'.  Add DEVICESCAN example.
	Remove duplicate and outdated info about device scanning.
	smartd.8.in: Add notes about RAID controllers to device scanning info.

2012-12-11  Stanislav Brabec  <sbrabec@suse.cz>

	* smartd.initd.in: SUSE: Added sysconfig options to disable
	persistent state writes, attribute log and set arbitrary smartd
	options.

2012-12-03  Christian Franke  <franke@computer.org>

	Avoid usage of strcpy(), strcat(), sprintf().
	Use snprintf() instead or change type to std::string.
	Use array references instead of char pointers for parameters.

2012-12-03  Christian Franke  <franke@computer.org>

	smartd.cpp: Ignore a device from DEVICESCAN if a preceding smartd.conf
	entry for the same device exists.

2012-11-28  Christian Franke  <franke@computer.org>

	smartd.conf.5.in: Document smartd_warning.sh/cmd scripts and
	the new environment variables.
	Makefile.am: Replace smartd_warning.* paths on man pages.
	Reformat long sed commands.

2012-11-27  Christian Franke  <franke@computer.org>

	smartd.cpp: Remove trailing newlines from some MailWarning() strings.
	os_win32/smartd_warning.cmd: Fix SMARTD_MESSAGE with parentheses.

2012-11-25  Alex Samorukov  <samm@os2.kiev.ua>

       OpenBSD: remove dummy functions

2012-11-24  Christian Franke  <franke@computer.org>

	Windows: Add tool wtssendmsg.exe based on no longer
	used module os_win32/wtssendmsg.cpp.
	os_win32/smartd_warning.cmd: Fix wtssendmsg call.
	os_win32/installer.nsi: Install smartd_warning.cmd
	and wtssendmsg.exe.  Fix uninstall of old ChangeLog.

2012-11-23  Christian Franke  <franke@computer.org>

	Move MSVC10 project files to new directory os_win32/vc10.

2012-11-22  Christian Franke  <franke@computer.org>
