@@ -1,5 +1,11 @@
 $Id$
 
+2012-12-12  Christian Franke  <franke@computer.org>
+
+	smartd.cpp: Remove very old _GNU_SOURCE define.
+	It was added 10 years ago in r147.  It is not (or no longer) needed
+	and has an unwanted side effect (__USE_MINGW_ANSI_STDIO) on MinGW.
+
 2012-12-11  Christian Franke  <franke@computer.org>
 
 	smartd.cpp: Add '-w PATH, --warnexec=PATH' option.
